test/errors/expressions_error/zs/offsets/signed_integer_error.zs
package offsets.signed_integer_error;

struct SignedIntegerError
{
    int32   offsets[];
offsets[@index]:
    uint32  values[];
};
